# nmn

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  MANIFEST.in  MODULARIZATION_SUMMARY.md  Makefile  PUBLISH.md  README.md  SECURITY.md  TODO.md  classify_your_own.html  do_you_even_mnist.html  index.html  llms.txt  manual_verification.py  mnist_tsne.csv  neural_matter_diagram.html  neuron_space.html  nmn.html  products.html  pyproject.toml  single_neuron.html  xor.html
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml  mirror.yml  publish.yml  test.yml
docs/: README.md  architecture.md  migration.md
docs/guides/: flax-linen.md  flax-nnx.md  keras.md  mlx.md  pytorch.md  tensorflow.md
examples/: README.md  test_examples.py
examples/keras/: basic_usage.py  language_imdb.py  vision_cifar10.py
neural_matter/: index.html  main.js  network.js  styles.css  training.js  visualization.js
nmn/: keras.py  tensorflow.py  torch.py
tests/: analyze_yat_kernel.py  benchmark_yat.py  benchmark_yat_performer.py  conftest.py  test_cli.py  test_gradient_scaling.py  test_rotary_yat_performer.py  test_rotary_yat_training.py  test_yat_memory.py
website/: README.md  build.js  build.py  create_blog_pages.py  create_template.py  extract-modals.js  extract_content.py  index.html  nmn.html
xor/: index.html  script.js  styles.css  xor.html
yatcharts/: index.html  script.js  styles.css
(+310 files in other folders)
